Set minimum pin width to fix broken image rendering on mobile

--- a/client/styles/app.css
+++ b/client/styles/app.css
@@ -7,7 +7,7 @@ body {
 body {
   text-align: center;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  min-width: 275px;
+  min-width: 300px;
   background: #f0f0f0;
   color: #000;
 
